.minikube/k8s.enalquiler.com/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: symfony-demo
  labels:
    app: symfony-demo
    env: prod
