.minikube/k8s.enalquiler.com/migrations.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: symfony-demo-migrations
  namespace: symfony-demo
  labels:
    app: symfony-demo
    env: prod
spec:
  containers:
  - name: cli-migrations
    image: enalquilertrainings/minikube-training-php:cli
    imagePullPolicy: Always
    command: ["php", "bin/console", "doc:mig:m", "--no-interaction"]
  restartPolicy: Never
  imagePullSecrets:
  - name: enalquiler-registry
