.minikube/k8s.enalquiler.com/mailhog.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: symfony-demo
  labels:
    app: symfony-demo
    env: prod
spec:
  selector:
    app: symfony-demo
    env: prod
    component: mta
  ports:
    - protocol: TCP
      port: 1025
      targetPort: 1025
