.minikube/k8s.enalquiler.com/mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: symfony-demo-mysql-service
  namespace: symfony-demo
  labels:
    app: symfony-demo
    env: prod
spec:
  selector:
    app: symfony-demo-mysql
    component: database
    env: prod
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
