.minikube/k8s.enalquiler.com/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: symfony-demo
spec:
  backend:
    serviceName: nginx
    servicePort: 80
